--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "php": ">=5.5.0",
     "bapcat/tailor": "dev-master",
     "bapcat/propifier": "dev-master",
-    "icanboogie/inflector": "dev-master"
+    "icanboogie/inflector": "dev-master",
+    "illuminate/database": "dev-master"
   },
   "require-dev": {
     "bapcat/values": "dev-master",
