--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "php": ">=5.5.0",
     "bapcat/interfaces": "dev-master",
     "bapcat/tailor": "dev-master",
-    "bapcat/propifier": "dev-master",
-    "icanboogie/inflector": "dev-master",
+    "bapcat/propifier": "^1.0",
+    "icanboogie/inflector": "^1.3",
     "illuminate/database": "dev-master"
   },
   "require-dev": {
