--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "bapcat/interfaces": "dev-master",
+    "bapcat/interfaces": "dev-master as 1.0.0",
     "bapcat/tailor": "dev-master",
     "bapcat/propifier": "^1.0",
     "icanboogie/inflector": "^1.3",
     "illuminate/database": "dev-master"
   },
   "require-dev": {
-    "bapcat/values": "dev-master",
-    "bapcat/phi": "dev-master"
+    "bapcat/values": "^0.9",
+    "bapcat/phi": "^1.1.1"
   },
   "autoload": {
     "psr-4": {
