--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,6 @@ php:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
-  - composer require satooshi/php-coveralls --prefer-source
 
 script:
-  - mkdir -p build/logs
-  - phpunit --coverage-clover build/logs/clover.xml tests
-
-after_script:
-  - php vendor/bin/coveralls -v
+  - ./test
