--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "illuminate/database": "dev-master"
   },
   "require-dev": {
-    "bapcat/values": "^0.9",
+    "bapcat/values": "dev-master",
     "bapcat/phi": "^1.1.1"
   },
   "autoload": {
