--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,16 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "bapcat/interfaces": "dev-master as 1.0.0",
+    "bapcat/interfaces": "dev-master as 1.1",
     "bapcat/tailor": "dev-master",
     "bapcat/propifier": "^1.0",
+    "bapcat/values": "dev-master as 0.1.1",
     "icanboogie/inflector": "^1.3",
     "illuminate/database": "dev-master"
   },
   "require-dev": {
     "bapcat/values": "dev-master",
-    "bapcat/phi": "^1.1.1"
+    "bapcat/phi": "^2.0"
   },
   "autoload": {
     "psr-4": {
