--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7.0
   - hhvm
@@ -9,6 +8,11 @@ php:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
+  - composer require satooshi/php-coveralls --prefer-source
 
 script:
-  - ./test
+  - mkdir -p build/logs
+  - ./test --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
