--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0",
+    "php": ">=5.6.0",
     "bapcat/interfaces": "dev-master as 1.1",
     "bapcat/tailor": "dev-master",
     "bapcat/propifier": "^1.0",
     "illuminate/database": "dev-master"
   },
   "require-dev": {
+    "phpunit/phpunit": "^5.0",
     "bapcat/hashing": "dev-master",
     "bapcat/values": "dev-master as 0.1.1",
     "bapcat/phi": "^2.0"
