--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
   "license": "GPLv3",
   "homepage": "http://github.com/BapCat/Remodel",
   "keywords": [],
-  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Corey Frenette",
@@ -13,20 +12,24 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "bapcat/interfaces": "dev-master as 1.1",
-    "bapcat/tailor": "dev-master",
+    "bapcat/interfaces": "^1.1",
+    "bapcat/hashing": "^0.2.3",
+    "bapcat/nom": "^0.1",
+    "bapcat/tailor": "^0.1",
     "bapcat/propifier": "^1.0",
-    "illuminate/database": "dev-master"
+    "illuminate/database": "^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0",
-    "bapcat/hashing": "dev-master",
-    "bapcat/values": "dev-master as 0.1.1",
+    "bapcat/values": "^0.1.1",
     "bapcat/phi": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "BapCat\\Remodel\\": "src/"
-    }
+    },
+    "files": [
+      "src/inflections.php"
+    ]
   }
 }
