--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     "php": ">=5.6.0",
     "bapcat/interfaces": "^1.1",
     "bapcat/hashing": "^0.2.3",
-    "bapcat/nom": "^0.1",
-    "bapcat/tailor": "^0.1",
+    "bapcat/nom": "^0.3",
+    "bapcat/tailor": "^0.2",
     "bapcat/propifier": "^1.0",
-    "illuminate/database": "^5.0"
+    "illuminate/database": "^5.0",
+    "doctrine/dbal": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0",
