--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,34 @@
 {
-  "name": "bapcat/remodel",
-  "description": "",
-  "license": "GPLv3",
-  "homepage": "http://github.com/BapCat/Remodel",
-  "keywords": [],
-  "authors": [
-    {
-      "name": "Corey Frenette",
-      "email": "corey@narwhunderful.com"
-    }
-  ],
-  "require": {
-    "php": ">=5.6.0",
-    "bapcat/interfaces": "^1.1",
-    "bapcat/hashing": "^0.2.3",
-    "bapcat/nom": "^0.3",
-    "bapcat/persist": "^0.2",
-    "bapcat/tailor": "^0.2",
-    "bapcat/propifier": "^1.0",
-    "illuminate/database": "^5.0",
-    "doctrine/dbal": "^2.5"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5.0",
-    "bapcat/values": "^0.1.1",
-    "bapcat/phi": "^2.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "BapCat\\Remodel\\": "src/"
-    },
-    "files": [
-      "src/inflections.php"
-    ]
-  }
+	"name" : "bapcat/remodel",
+	"license" : "GPLv3",
+	"homepage" : "http://github.com/BapCat/Remodel",
+	"authors" : [{
+			"name" : "Corey Frenette",
+			"email" : "corey@narwhunderful.com"
+		}
+	],
+	"require" : {
+		"php" : ">=5.6.0",
+		"bapcat/interfaces" : "^1.1",
+		"bapcat/hashing" : "^0.2.3",
+		"bapcat/nom" : "^0.3.1",
+		"bapcat/persist" : "^0.2.5",
+		"bapcat/tailor" : "^0.3",
+		"bapcat/propifier" : "^1.0",
+		"illuminate/database" : "^5.0",
+		"doctrine/dbal" : "^2.5"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "^5.0",
+		"bapcat/values" : "^0.1.1",
+		"bapcat/phi" : "^2.0"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"BapCat\\Remodel\\" : "src/"
+		},
+		"files" : [
+			"src/inflections.php"
+		]
+	}
 }
