--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"bapcat/tailor" : "^0.3.1",
 		"bapcat/propifier" : "^1.2",
 		"illuminate/database" : "^5.0",
-		"doctrine/dbal" : "^2.5"
+		"doctrine/dbal" : "^2.5",
+		"jenssegers/mongodb": "^3.0"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^5.0",
