--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
 			"email" : "corey@narwhunderful.com"
 		}
 	],
+  "minimum-stability": "dev",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/BapCat/database"
+    }
+  ],
 	"require" : {
 		"php" : ">=5.6.0",
 		"bapcat/interfaces" : "^1.1",
@@ -15,9 +22,8 @@
 		"bapcat/persist" : "^0.2.5",
 		"bapcat/tailor" : "^0.3.1",
 		"bapcat/propifier" : "^1.2",
-		"illuminate/database" : "^5.0",
-		"doctrine/dbal" : "^2.5",
-		"jenssegers/mongodb": "^3.0"
+		"illuminate/database" : "dev-master",
+		"jenssegers/mongodb" : "^3.0"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^5.0",
