--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
   - composer require satooshi/php-coveralls --prefer-source
+  - pecl install mongodb
 
 script:
   - mkdir -p build/logs
