--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"bapcat/nom" : "^0.3.1",
 		"bapcat/persist" : "^0.2.5",
 		"bapcat/tailor" : "^0.3.1",
-		"bapcat/propifier" : "^1.2"
+		"bapcat/propifier" : "^1.2",
+        "illuminate/database" : "^5.0"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^5.0",
