--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,38 @@
 {
-	"name" : "bapcat/remodel",
-	"license" : "GPLv3",
-	"homepage" : "http://github.com/BapCat/Remodel",
-	"authors" : [{
-			"name" : "Corey Frenette",
-			"email" : "corey@narwhunderful.com"
-		}
-	],
-	"require" : {
-		"php" : ">=5.6.0",
-		"bapcat/interfaces" : "^1.1",
-		"bapcat/hashing" : "^0.2.3",
-		"bapcat/nom" : "^0.3.1",
-		"bapcat/persist" : "^0.2.5",
-		"bapcat/tailor" : "^0.3.1",
-		"bapcat/propifier" : "^1.2",
-        "illuminate/database" : "^5.0"
-	},
-	"require-dev" : {
-		"phpunit/phpunit" : "^5.0",
-		"bapcat/values" : "^0.1.5",
-		"bapcat/phi" : "^2.0",
-		"jenssegers/mongodb" : "^3.0"
-	},
-	"suggest": {
-		"jenssegers/mongodb": "Required to use MongoDB"
-	},
-	"autoload" : {
-		"psr-4" : {
-			"BapCat\\Remodel\\" : "src/"
-		},
-		"files" : [
-			"src/inflections.php"
-		]
-	}
+  "name" : "bapcat/remodel",
+  "license" : "GPLv3",
+  "homepage" : "http://github.com/BapCat/Remodel",
+  "authors" : [{
+      "name" : "Corey Frenette",
+      "email" : "corey@narwhunderful.com"
+    }
+  ],
+  "require" : {
+    "php" : ">=5.6.0",
+    "bapcat/interfaces" : "^1.1",
+    "bapcat/hashing" : "^0.2.3",
+    "bapcat/nom" : "^0.3.1",
+    "bapcat/persist" : "^0.2.5",
+    "bapcat/tailor" : "^0.3.2",
+    "bapcat/propifier" : "^1.2",
+    "illuminate/database" : "^5.4"
+  },
+  "require-dev" : {
+    "ext-pdo_sqlite" : "*",
+    "phpunit/phpunit" : "^5.0",
+    "bapcat/values" : "^0.1.5",
+    "bapcat/phi" : "^2.0",
+    "jenssegers/mongodb" : "^3.0"
+  },
+  "suggest": {
+    "jenssegers/mongodb": "Required to use MongoDB"
+  },
+  "autoload" : {
+    "psr-4" : {
+      "BapCat\\Remodel\\" : "src/"
+    },
+    "files" : [
+      "src/inflections.php"
+    ]
+  }
 }
