Use SPDX license identifier

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name" : "bapcat/remodel",
-  "license" : "GPLv3",
+  "license" : "GPL-3.0-or-later",
   "homepage" : "http://github.com/BapCat/Remodel",
   "authors" : [{
       "name" : "Corey Frenette",
