--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,21 @@
     }
   ],
   "require" : {
-    "php" : ">=5.6.0",
-    "bapcat/interfaces" : "^1.1",
-    "bapcat/hashing" : "^0.2.3",
-    "bapcat/nom" : "^0.3.1",
-    "bapcat/persist" : "^0.2.5",
-    "bapcat/tailor" : "^0.4",
-    "bapcat/propifier" : "^1.2",
+    "php" : "^7.1",
+    "ext-pdo": "*",
+    "bapcat/hashing" : "^0.3",
+    "bapcat/nom" : "^0.4",
+    "bapcat/persist" : "^0.3",
+    "bapcat/tailor" : "^0.5",
+    "bapcat/propifier" : "^2.0",
     "illuminate/database" : "^5.4"
   },
   "require-dev" : {
+    "roave/security-advisories": "dev-master",
     "ext-pdo_sqlite" : "*",
-    "phpunit/phpunit" : "^5.0",
-    "bapcat/values" : "^0.1.5",
-    "bapcat/phi" : "^2.0",
+    "phpunit/phpunit" : "^7.5",
+    "bapcat/values" : "^0.2",
+    "bapcat/phi" : "^3.0",
     "jenssegers/mongodb" : "^3.0"
   },
   "suggest": {
