--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 7.2
 
 before_script:
+  - pecl install mongodb
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
 
