--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ php:
   - 7.2
 
 before_script:
-  - pecl install mongodb
+  - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
 
 script:
   - mkdir -p build/logs
-  - phpunit --coverage-clover build/logs/clover.xml tests
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml tests
 
 after_success:
   - composer require php-coveralls/php-coveralls --prefer-source
