--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: php
 
 php:
-  - 5.6
-  - 7.0
+  - 7.1
+  - 7.2
 
 before_script:
-  - pecl install mongodb
+  - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
-  - composer require satooshi/php-coveralls --prefer-source
 
 script:
   - mkdir -p build/logs
-  - ./test --coverage-clover build/logs/clover.xml
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml tests
 
-after_script:
-  - php vendor/bin/coveralls -v
+after_success:
+  - composer require php-coveralls/php-coveralls --prefer-source
+  - php vendor/bin/php-coveralls -v
